# Task_Tracker

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Stack/include/: Stack.h
include/: Task.hpp  TaskManager.hpp
include/Menu/: menu.hpp
include/historymanager/: HistoryManager.hpp
include/models/: TaskManager.hpp
include/models/auth/: AuthService.hpp  ISessionManager.hpp  PasswordHash.hpp  SessionManager.hpp
include/models/entities/: Projects.hpp  Roles.hpp  Task.hpp  TaskComments.hpp  TasksHistory.hpp  User.hpp  Users.hpp
include/models/exceptions/: CustomExceptions.hpp
include/models/historymanager/: HistoryManager.hpp  IHistoryManager.hpp  UsersHistoryManager.hpp
include/models/repository/: DatabaseManager.hpp  IRepository.hpp  ProjectsRepo.hpp  RolesRepo.hpp  TaskCommentsRepo.hpp  TaskRepo.hpp  UserRepo.hpp  UsersRepo.hpp
include/models/services/: IService.hpp  ProjectsService.hpp  RolesService.hpp  TaskService.hpp  UserService.hpp  UsersService.hpp
include/repository/: ITaskRepository.hpp  PostgresTask.hpp
include/view/: HMenu.hpp  SideBar.hpp  View.hpp
src/: Task.cpp  TaskManager.cpp  main.cpp
src/Menu/: menu.cpp
src/historymanager/: HistoryManager.cpp
src/models/: TaskManager.cpp
src/models/auth/: PasswordHash.cpp  SessionManager.cpp
src/models/entities/: Projects.cpp  Roles.cpp  Task.cpp  TaskComments.cpp  User.cpp  Users.cpp
src/models/historymanager/: HistoryManager.cpp
src/models/repository/: DatabaseManager.cpp  PostgresTask.cpp  ProjectsRepo.cpp  RolesRepo.cpp  TaskCommentsRepo.cpp  TaskRepo.cpp  UserRepo.cpp  UsersRepo.cpp
src/models/services/: RolesService.cpp  TaskService.cpp  UserService.cpp  UsersService.cpp
src/repository/: PostgresTask.cpp
src/view/: HMenu.cpp  SideBar.cpp  View.cpp
